examples/test/testpolicy8776.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy8776
  namespace: namespace196
spec:
  podSelector:
    matchLabels:
      key40: value25
      key31: value45
      key17: value7
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key47: value35
      podSelector:
        matchLabels:
          key24: value20
